# atlas1

./: pyproject.toml  render.yaml
backend/: README.md  backend_app.py  refined_features.pkl  refined_model.pkl  refined_scaler.pkl
frontend/atlas-stroke-navigator/: README.md  index.html
frontend/atlas-stroke-navigator/src/: App.css  App.tsx  index.css
frontend/atlas-stroke-navigator/src/components/: Layout.tsx
frontend/atlas-stroke-navigator/src/pages/: Assessment.tsx  Dashboard.tsx  Home.tsx  LearningCenter.tsx
