[tool.poetry]
name = "atlas1-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.2"
uvicorn = "0.22.0"
joblib = "1.5.1"
pandas = "1.5.3"
numpy = "1.24.3"
pydantic = "1.10.11"
starlette = "0.27.0"
scikit-learn = "^1.6.1"

[tool.poetry.dev-dependencies]
# put dev dependencies like pytest here, if any

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
